2009-02-11  Daniel Nylander <po@danielnylander.se>

	* po/sv.po: Updated translations.

2009-01-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_sm_setcred.3.xml: Document PAM_ESTABLISH_CRED.

2009-01-19  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_mkhomedir/Makefile.am: Add mkhomedir_helper.
	* modules/pam_mkhomedir/mkhomedir_helper.8.xml: New file. Manual page
	for mkhomedir_helper.
	* modules/pam_mkhomedir/mkhomedir_helper.c: New file. Source
	for mkhomedir_helper. Most of the code moved from pam_mkhomedir.c.
	* modules/pam_mkhomedir/pam_mkhomedir.c (_pam_parse): Do not convert umask
	to integer.
	(rec_mkdir): Moved to mkhomedir_helper.c.
	(create_homedir): Just exec the helper.
	(pam_sm_open_session): Improve logging.

2009-01-19  Daniel Cabrera <h.daniel.cabrera@gmail.com>

	* po/es.po: Updated translations.

2009-01-14  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/de.po: Updated translations.

2009-01-07  Piotr Drąg <piotrdrag@gmail.com>

	* po/pl.po: Updated translations.

2008-12-23  Piotr Drąg <piotrdrag@gmail.com>

	* po/pl.po: Updated translations.

2008-12-18  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_pwhistory/pam_pwhistory.c (parse_option): Rename
	type= option to authtok_type= (because of pam_get_authtok).
	* modules/pam_pwhistory/pam_pwhistory.8.xml: Likewise.

2008-12-17  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_tty_audit/pam_tty_audit.c (pam_sm_open_session): Do
	not abort on unknown option. Avoid double free of old_status.
	(pam_sm_close_session): Use LOG_DEBUG for restored status message.

	* configure.in: Test for getseuser().
	* modules/pam_selinux/pam_selinux.c (pam_sm_open_session): Call getseuser()
	instead of getseuserbyname() if the function is available.

2008-12-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.90

	* libpam_misc/Makefile.am: Increase version number of shared library.
	* libpamc/Makefile.am: Likewise.

2008-12-12  Tomas Mraz <t8m@centrum.cz>
